# Image-Filters-

./: .gitignore  CMakeLists.txt  filter.cc
helpers/: bmp.h  helpers.h
helpers/filters/: filters.h
src/: main.cc
src/filters/: filters.cc
